--- a/src/_navigation.scss
+++ b/src/_navigation.scss
@@ -64,12 +64,20 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      padding-left: 0px;
     }
     li { margin-right: 20px; }
     a {
       text-decoration: none;
       font-size: 1rem;
     }
+}
+.navigation__cell.nav-left {
+  justify-content: center;
+}
+.navigation__cell.nav-right {
+  justify-content: flex-start;
+  padding-left: 20px;
 }
 /* Links */
 .menu-item {
